colang-cli/tests/samples/good/abs_method.co
fun main() {
  var x = -2;
  assert(x.abs() == 2);
}
