colang-cli/tests/samples/compile_error/is_expr_non_pointer.co
fun main() {
  var x = 2, y = 2;
  assert(x is y);
}
